--- a/public/css/default/dashboard.css
+++ b/public/css/default/dashboard.css
@@ -6,6 +6,7 @@
 }
 .dashboard .top {
   display: flex;
+  flex-flow: column;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -14,17 +15,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 2;
   min-height: 33vh;
-}
-.dashboard .top .head {
-  flex-grow: 3;
+  width: 100%;
 }
 .dashboard .middle {
   display: flex;
+  flex-flow: column;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+  gap: 0.5rem;
 }
 .dashboard .middle .charts {
   min-height: 33vh;
@@ -33,6 +33,7 @@
 .dashboard .bottom {
   width: 100%;
   display: flex;
+  flex-flow: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 1rem;
@@ -61,6 +62,8 @@
 }
 .dashboard .bottom .sides form {
   width: 100%;
+  border: 0.1rem dotted gray;
+  padding: 0.5rem;
 }
 .dashboard .bottom .sides form label {
   color: white;
@@ -79,4 +82,16 @@
   align-items: center;
   width: 100%;
   margin-top: 0.5rem;
+}
+
+@media screen and (min-width: 920px) {
+  .dashboard .top {
+    flex-flow: row;
+  }
+  .dashboard .middle {
+    flex-flow: row;
+  }
+  .dashboard .bottom {
+    flex-flow: row;
+  }
 }/*# sourceMappingURL=dashboard.css.map */
